feat: Links to photos are given from the server via api